# RaylibRoguelike

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2025-01-15_08-09-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-16_04-59-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-18_18-08-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-21_07-24-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-21_07-25-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-21_09-07-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/map/: 0x72_DungeonTilesetII_v1.7.tsx  asdf.tsx  main.tsx  map.csv  rougelike.tiled-session  untitled.tmx  wer.tsx
src/: camera.cpp  camera.h  enemy.cpp  enemy.h  filereader.cpp  filereader.h  main.cpp  player.cpp  player.h  score.cpp  score.h  startmenu.cpp  startmenu.h  tilesystem.cpp  tilesystem.h  timer.cpp  timer.h  weapon.cpp  weapon.h
